# BVID-FE

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  BvidFE.spec  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT_STREAMLIT.md  LICENSE  OVERNIGHT_NOTES.md  README.md  app.py  conftest.py  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/hooks/: session_start.sh
.github/workflows/: build.yml  release.yml  tests.yml
docs/: BUILD.md  cscan_schema.md  python_api.md
examples/: 01_empirical_quick.py  02_tier_comparison.py  03_energy_sweep.py  04_inspection_driven.py  05_tier_comparison_sweep.py  README.md  sample_cscan.json
scripts/: benchmark.py  build_macos.sh  build_windows.bat  self_test.py  validate_inputs.py  visual_matrix.py
src/bvidfe/: __init__.py  cli.py
tests/: test_cli.py  test_cli_version.py  test_edge_cases.py  test_input_sensitivity.py  test_package.py  test_per_ply_thickness.py  test_validation_smoke.py
tests/analysis/: test_empirical_path.py  test_fe3d_buckling.py  test_fe3d_path.py  test_fe_mesh.py  test_fe_tier.py  test_fpf_strain_solve_equivalence.py  test_semi_analytical.py  test_semi_analytical_path.py
tests/core/: test_geometry.py  test_laminate.py  test_material.py
tests/damage/: test_io.py  test_state.py
tests/elements/: test_cohesive.py  test_gauss.py  test_hex8.py  test_hex8_geometric_stiffness.py  test_hex8i.py
tests/failure/: test_evaluator.py  test_larc05.py  test_soutis.py  test_tsai_wu.py
validation/: README.md  reference_data.json  validate_bvid_public.py
(+79 files in other folders)
